--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "hoek": "4.2.1"
+    "react-dom": "^16.4.1"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
